Fix spacing between tab title and description.
Remove css rule which was incorrectly adding margins to the description in the tab header. These margins are not present on any other tab header.

--- a/app/components/views/GovernancePage/TabHeader/TabHeader.module.css
+++ b/app/components/views/GovernancePage/TabHeader/TabHeader.module.css
@@ -1,8 +1,3 @@
-.descriptionHeaderMain {
-  margin-bottom: 10px;
-  margin-top: 5px;
-}
-
 @media screen and (max-width: 768px) {
   .descriptionHeader {
     display: none;
